// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImagePreview snapshot renders correctly 1`] = `
<ImagePreview
  activeIndex={0}
  images={
    Array [
      "https://static.zhongan.com/website/health/zarm/images/banners/1.png",
      "https://static.zhongan.com/website/health/zarm/images/banners/2.png",
      "https://static.zhongan.com/website/health/zarm/images/banners/3.png",
    ]
  }
  onChange={[MockFunction]}
  prefixCls="zs-image-preview"
  showPagination={true}
  visible={true}
>
  <ForwardRef(ForwardedRefComp)
    className="zs-image-preview"
    direction="center"
    visible={true}
  >
    <WarnIfDeprecatedComp
      className="zs-image-preview"
      direction="center"
      forwardedRef={null}
      visible={true}
    >
      <Popup
        className="zs-image-preview"
        destroy={true}
        direction="center"
        prefixCls="zs-popup"
        visible={true}
      >
        <Portal
          animationDuration={200}
          animationType="fade"
          className="zs-image-preview"
          destroy={true}
          direction="center"
          handlePortalUnmount={[Function]}
          mask={true}
          maskType="normal"
          prefixCls="zs-popup"
          visible={true}
        >
          <Trigger
            disabled={false}
            onClose={[Function]}
            visible={true}
          >
            <Portal
              containerInfo={
                <div
                  class="zs-popup-container zs-image-preview"
                >
                  <div
                    class="zs-mask zs-fade-enter zs-mask--normal"
                    style="animation-duration: 200ms;"
                  />
                  <div
                    class="zs-popup__wrapper zs-fade-enter"
                    data-width="0"
                    role="dialog"
                    style="animation-duration: 200ms;"
                  >
                    <div
                      class="zs-popup zs-popup--center zs-fade-enter"
                      data-width="0"
                      role="document"
                      style="animation-duration: 200ms;"
                    >
                      <div
                        class="zs-image-preview__content"
                      >
                        <div
                          class="zs-carousel zs-carousel--horizontal"
                        >
                          <div
                            class="zs-carousel__items"
                            style="transition-duration: 0ms; transform: translate3d(0px, 0px, 0);"
                          >
                            <div
                              class="zs-carousel__item zs-image-preview__item"
                            >
                              <div
                                class="zs-image-preview__item__img zs-pinch-zoom"
                              >
                                <img
                                  alt=""
                                  draggable="false"
                                  src="https://static.zhongan.com/website/health/zarm/images/banners/1.png"
                                />
                              </div>
                            </div>
                            <div
                              class="zs-carousel__item zs-image-preview__item"
                            >
                              <div
                                class="zs-image-preview__item__img zs-pinch-zoom"
                              >
                                <img
                                  alt=""
                                  draggable="false"
                                  src="https://static.zhongan.com/website/health/zarm/images/banners/2.png"
                                />
                              </div>
                            </div>
                            <div
                              class="zs-carousel__item zs-image-preview__item"
                            >
                              <div
                                class="zs-image-preview__item__img zs-pinch-zoom"
                              >
                                <img
                                  alt=""
                                  draggable="false"
                                  src="https://static.zhongan.com/website/health/zarm/images/banners/3.png"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="zs-image-preview__footer"
                      >
                        <div
                          class="zs-image-preview__index"
                        >
                          1
                           / 
                          3
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              }
            >
              <Mask
                className="zs-fade-enter"
                prefixCls="zs-mask"
                style={
                  Object {
                    "WebkitAnimationDuration": "200ms",
                    "animationDuration": "200ms",
                  }
                }
                type="normal"
                visible={true}
              >
                <div
                  className="zs-mask zs-fade-enter zs-mask--normal"
                  style={
                    Object {
                      "WebkitAnimationDuration": "200ms",
                      "animationDuration": "200ms",
                    }
                  }
                />
              </Mask>
              <div
                className="zs-popup__wrapper zs-fade-enter"
                data-width={0}
                onClick={[Function]}
                role="dialog"
                style={
                  Object {
                    "WebkitAnimationDuration": "200ms",
                    "animationDuration": "200ms",
                  }
                }
              >
                <div
                  className="zs-popup zs-popup--center zs-fade-enter"
                  data-width={0}
                  role="document"
                  style={
                    Object {
                      "WebkitAnimationDuration": "200ms",
                      "animationDuration": "200ms",
                      "width": undefined,
                    }
                  }
                >
                  <div
                    className="zs-image-preview__content"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseMove={[Function]}
                    onMouseUp={[Function]}
                    onTouchCancel={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                  >
                    <Carousel
                      activeIndex={0}
                      animationDuration={500}
                      autoPlay={false}
                      autoPlayIntervalTime={3000}
                      direction="left"
                      height={160}
                      loop={false}
                      moveDistanceRatio={0.5}
                      moveTimeSpan={300}
                      onChange={[Function]}
                      prefixCls="zs-carousel"
                      showPagination={false}
                      swipeable={true}
                    >
                      <div
                        className="zs-carousel zs-carousel--horizontal"
                      >
                        <Drag
                          onDragEnd={[Function]}
                          onDragMove={[Function]}
                          onDragStart={[Function]}
                        >
                          <div
                            className="zs-carousel__items"
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            onTransitionEnd={[Function]}
                            style={Object {}}
                          >
                            <div
                              className="zs-carousel__item zs-image-preview__item"
                              key=".$0"
                            >
                              <PinchZoom
                                className="zs-image-preview__item__img"
                                maxScale={3}
                                minScale={1}
                                prefixCls="zs-pinch-zoom"
                              >
                                <div
                                  className="zs-image-preview__item__img zs-pinch-zoom"
                                >
                                  <img
                                    alt=""
                                    draggable={false}
                                    key="0/.0"
                                    onLoad={[Function]}
                                    src="https://static.zhongan.com/website/health/zarm/images/banners/1.png"
                                  />
                                </div>
                              </PinchZoom>
                            </div>
                            <div
                              className="zs-carousel__item zs-image-preview__item"
                              key=".$1"
                            >
                              <PinchZoom
                                className="zs-image-preview__item__img"
                                maxScale={3}
                                minScale={1}
                                prefixCls="zs-pinch-zoom"
                              >
                                <div
                                  className="zs-image-preview__item__img zs-pinch-zoom"
                                >
                                  <img
                                    alt=""
                                    draggable={false}
                                    key="0/.0"
                                    onLoad={[Function]}
                                    src="https://static.zhongan.com/website/health/zarm/images/banners/2.png"
                                  />
                                </div>
                              </PinchZoom>
                            </div>
                            <div
                              className="zs-carousel__item zs-image-preview__item"
                              key=".$2"
                            >
                              <PinchZoom
                                className="zs-image-preview__item__img"
                                maxScale={3}
                                minScale={1}
                                prefixCls="zs-pinch-zoom"
                              >
                                <div
                                  className="zs-image-preview__item__img zs-pinch-zoom"
                                >
                                  <img
                                    alt=""
                                    draggable={false}
                                    key="0/.0"
                                    onLoad={[Function]}
                                    src="https://static.zhongan.com/website/health/zarm/images/banners/3.png"
                                  />
                                </div>
                              </PinchZoom>
                            </div>
                          </div>
                        </Drag>
                      </div>
                    </Carousel>
                  </div>
                  <div
                    className="zs-image-preview__footer"
                  >
                    <div
                      className="zs-image-preview__index"
                    >
                      1
                       / 
                      3
                    </div>
                  </div>
                </div>
              </div>
            </Portal>
          </Trigger>
        </Portal>
      </Popup>
    </WarnIfDeprecatedComp>
  </ForwardRef(ForwardedRefComp)>
</ImagePreview>
`;

exports[`ImagePreview snapshot renders correctly with origin 1`] = `
<ImagePreview
  activeIndex={0}
  images={
    Array [
      Object {
        "originUrl": "https://static.zhongan.com/website/health/zarm/images/banners/1.png",
        "url": "https://cdn-health.zhongan.com/zarm/imagePreview/compress_1.png",
      },
      Object {
        "originUrl": "https://static.zhongan.com/website/health/zarm/images/banners/2.png",
        "url": "https://cdn-health.zhongan.com/zarm/imagePreview/compress_2.png",
      },
      Object {
        "originUrl": "https://static.zhongan.com/website/health/zarm/images/banners/3.png",
        "url": "https://cdn-health.zhongan.com/zarm/imagePreview/compress_3.png",
      },
    ]
  }
  onChange={[MockFunction]}
  prefixCls="zs-image-preview"
  showPagination={true}
  visible={true}
>
  <ForwardRef(ForwardedRefComp)
    className="zs-image-preview"
    direction="center"
    visible={true}
  >
    <WarnIfDeprecatedComp
      className="zs-image-preview"
      direction="center"
      forwardedRef={null}
      visible={true}
    >
      <Popup
        className="zs-image-preview"
        destroy={true}
        direction="center"
        prefixCls="zs-popup"
        visible={true}
      >
        <Portal
          animationDuration={200}
          animationType="fade"
          className="zs-image-preview"
          destroy={true}
          direction="center"
          handlePortalUnmount={[Function]}
          mask={true}
          maskType="normal"
          prefixCls="zs-popup"
          visible={true}
        >
          <Trigger
            disabled={false}
            onClose={[Function]}
            visible={true}
          >
            <Portal
              containerInfo={
                <div
                  class="zs-popup-container zs-image-preview"
                >
                  <div
                    class="zs-mask zs-fade-enter zs-mask--normal"
                    style="animation-duration: 200ms;"
                  />
                  <div
                    class="zs-popup__wrapper zs-fade-enter"
                    data-width="0"
                    role="dialog"
                    style="animation-duration: 200ms;"
                  >
                    <div
                      class="zs-popup zs-popup--center zs-fade-enter"
                      data-width="0"
                      role="document"
                      style="animation-duration: 200ms;"
                    >
                      <div
                        class="zs-image-preview__content"
                      >
                        <div
                          class="zs-carousel zs-carousel--horizontal"
                        >
                          <div
                            class="zs-carousel__items"
                            style="transition-duration: 0ms; transform: translate3d(0px, 0px, 0);"
                          >
                            <div
                              class="zs-carousel__item zs-image-preview__item"
                            >
                              <div
                                class="zs-image-preview__item__img zs-pinch-zoom"
                              >
                                <img
                                  alt=""
                                  draggable="false"
                                  src="https://cdn-health.zhongan.com/zarm/imagePreview/compress_1.png"
                                />
                              </div>
                            </div>
                            <div
                              class="zs-carousel__item zs-image-preview__item"
                            >
                              <div
                                class="zs-image-preview__item__img zs-pinch-zoom"
                              >
                                <img
                                  alt=""
                                  draggable="false"
                                  src="https://cdn-health.zhongan.com/zarm/imagePreview/compress_2.png"
                                />
                              </div>
                            </div>
                            <div
                              class="zs-carousel__item zs-image-preview__item"
                            >
                              <div
                                class="zs-image-preview__item__img zs-pinch-zoom"
                              >
                                <img
                                  alt=""
                                  draggable="false"
                                  src="https://cdn-health.zhongan.com/zarm/imagePreview/compress_3.png"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="zs-image-preview__footer"
                      >
                        <button
                          class="zs-image-preview__origin__button"
                        />
                        <div
                          class="zs-image-preview__index"
                        >
                          1
                           / 
                          3
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              }
            >
              <Mask
                className="zs-fade-enter"
                prefixCls="zs-mask"
                style={
                  Object {
                    "WebkitAnimationDuration": "200ms",
                    "animationDuration": "200ms",
                  }
                }
                type="normal"
                visible={true}
              >
                <div
                  className="zs-mask zs-fade-enter zs-mask--normal"
                  style={
                    Object {
                      "WebkitAnimationDuration": "200ms",
                      "animationDuration": "200ms",
                    }
                  }
                />
              </Mask>
              <div
                className="zs-popup__wrapper zs-fade-enter"
                data-width={0}
                onClick={[Function]}
                role="dialog"
                style={
                  Object {
                    "WebkitAnimationDuration": "200ms",
                    "animationDuration": "200ms",
                  }
                }
              >
                <div
                  className="zs-popup zs-popup--center zs-fade-enter"
                  data-width={0}
                  role="document"
                  style={
                    Object {
                      "WebkitAnimationDuration": "200ms",
                      "animationDuration": "200ms",
                      "width": undefined,
                    }
                  }
                >
                  <div
                    className="zs-image-preview__content"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseMove={[Function]}
                    onMouseUp={[Function]}
                    onTouchCancel={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                  >
                    <Carousel
                      activeIndex={0}
                      animationDuration={500}
                      autoPlay={false}
                      autoPlayIntervalTime={3000}
                      direction="left"
                      height={160}
                      loop={false}
                      moveDistanceRatio={0.5}
                      moveTimeSpan={300}
                      onChange={[Function]}
                      prefixCls="zs-carousel"
                      showPagination={false}
                      swipeable={true}
                    >
                      <div
                        className="zs-carousel zs-carousel--horizontal"
                      >
                        <Drag
                          onDragEnd={[Function]}
                          onDragMove={[Function]}
                          onDragStart={[Function]}
                        >
                          <div
                            className="zs-carousel__items"
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            onTransitionEnd={[Function]}
                            style={Object {}}
                          >
                            <div
                              className="zs-carousel__item zs-image-preview__item"
                              key=".$0"
                            >
                              <PinchZoom
                                className="zs-image-preview__item__img"
                                maxScale={3}
                                minScale={1}
                                prefixCls="zs-pinch-zoom"
                              >
                                <div
                                  className="zs-image-preview__item__img zs-pinch-zoom"
                                >
                                  <img
                                    alt=""
                                    draggable={false}
                                    key="0/.0"
                                    onLoad={[Function]}
                                    src="https://cdn-health.zhongan.com/zarm/imagePreview/compress_1.png"
                                  />
                                </div>
                              </PinchZoom>
                            </div>
                            <div
                              className="zs-carousel__item zs-image-preview__item"
                              key=".$1"
                            >
                              <PinchZoom
                                className="zs-image-preview__item__img"
                                maxScale={3}
                                minScale={1}
                                prefixCls="zs-pinch-zoom"
                              >
                                <div
                                  className="zs-image-preview__item__img zs-pinch-zoom"
                                >
                                  <img
                                    alt=""
                                    draggable={false}
                                    key="0/.0"
                                    onLoad={[Function]}
                                    src="https://cdn-health.zhongan.com/zarm/imagePreview/compress_2.png"
                                  />
                                </div>
                              </PinchZoom>
                            </div>
                            <div
                              className="zs-carousel__item zs-image-preview__item"
                              key=".$2"
                            >
                              <PinchZoom
                                className="zs-image-preview__item__img"
                                maxScale={3}
                                minScale={1}
                                prefixCls="zs-pinch-zoom"
                              >
                                <div
                                  className="zs-image-preview__item__img zs-pinch-zoom"
                                >
                                  <img
                                    alt=""
                                    draggable={false}
                                    key="0/.0"
                                    onLoad={[Function]}
                                    src="https://cdn-health.zhongan.com/zarm/imagePreview/compress_3.png"
                                  />
                                </div>
                              </PinchZoom>
                            </div>
                          </div>
                        </Drag>
                      </div>
                    </Carousel>
                  </div>
                  <div
                    className="zs-image-preview__footer"
                  >
                    <button
                      className="zs-image-preview__origin__button"
                      onClick={[Function]}
                    />
                    <div
                      className="zs-image-preview__index"
                    >
                      1
                       / 
                      3
                    </div>
                  </div>
                </div>
              </div>
            </Portal>
          </Trigger>
        </Portal>
      </Popup>
    </WarnIfDeprecatedComp>
  </ForwardRef(ForwardedRefComp)>
</ImagePreview>
`;
